[package]
name = "quic-proxy"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
anyhow = "1.0.79"
pin-project-lite = "0.2.13"
quinn = "0.10.2"
tokio-util = { version = "0.7.10", features = ["full"] }
url = "2.5.0"
clap = { version = "4.4.18", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
rustls = "0.21.10"
rustls-pemfile = "1.0.4"
base64 = "0.21.7"
